# discord-bot

./: .gitignore  LICENSE  README.md  compose.yml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  index.js  package-lock.json  package.json  settings_template.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20250421193500_init/: migration.sql
backend/prisma/migrations/20250421232501_fiz/: migration.sql
backend/prisma/migrations/20250425151311_channel_table/: migration.sql
backend/prisma/migrations/20250425162916_add_categoria/: migration.sql
backend/prisma/migrations/20250427182439_more_items/: migration.sql
backend/prisma/migrations/20250427194245_fix_relation_erro/: migration.sql
backend/prisma/migrations/20250427194946_aaaa/: migration.sql
backend/src/controllers/: channel.js  guild.js  guildConfig.js  member.js
backend/src/routes/: channel.js  guild.js  guildConfig.js  member.js
backend/src/schema/: channel.schema.js  guild.schema.js
backend/src/service/: channel.js  guild.js  guildConfig.js  member.js
bot/: Dockerfile  dockerfile  main.py  pyproject.toml  requirements.txt
bot/cogs/: autoAudioRoom.py  configCommands.py  syncChannelsBack.py  syncInformationBack.py
dashboard/: package-lock.json  package.json
dashboard/prisma/: schema.prisma
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  index.css
frontend/src/components/: serverCards.jsx
frontend/src/pages/: home.jsx  serverPage.jsx
frontend/src/utils/: apiInstance.js
(+10 files in other folders)
