[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["all <allmacdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
dotenv = "^0.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
